--- a/front_end/app/templates/index.html
+++ b/front_end/app/templates/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">TrueFitSKinCare</a>
+          <a class="navbar-brand" href="#">TrueFitSkinCare</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -57,7 +57,7 @@
 
     
     <div class="container">
-      <h2 id="title">What you do you need today?</h2>
+      <h2 id="title">What do you need today?</h2>
       <select id="category" class="form-control">
         <option value="moisturizer-skincare">Moisturizer</option>
         <option value="bb-cream-cc-cream">BB & CC cream</option>
@@ -70,8 +70,7 @@
       </select>
 
       <button id="submit" type="button" class="btn btn-primary" onclick="return btntest_onclick()">Find your true fit!</button>
-
-      <h3>  Tell us your favorite product from the following categories:</h3>
+      <h3> Choose your favorite products to build your personal beauty profile: </h3>
       <!-- <h4>      The more we know about you, the better we recommend! </h4> -->
 
       <div class="divider"></div>
