--- a/front_end/app/templates/results.html
+++ b/front_end/app/templates/results.html
@@ -33,14 +33,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">TrueFitSKinCare</a>
+          <a class="navbar-brand" href="#">TrueFitSkinCare</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#about">Chang Liu</a></li>
+            <li><a href="#about">Chang Liu</a></li>
             <li><a href="/">Home</a></li>
             <li><a href="/slides">Slides</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="mailto:j8d8l5@gmail.com">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
