--- a/front_end/app/templates/slides_bw.html
+++ b/front_end/app/templates/slides_bw.html
@@ -70,30 +70,30 @@ a:hover {
 
 <section style="text-align:center;padding-top:5em;">
   <div class="pagetitle" >Product-Product Similarity Matrix </b></div>
-  <div class="problem" id="sim"> <img src="./static/images/sim_product_final.png" style="width:100%"></div>
+  <div class="problem" id="sim"> <img src="./static/images/sim_product_final_bn.png" style="width:100%"></div>
   <div id="illu" style="text-align:left"> 
     <br>Pixel color = Pair-wise similarity<br>from 32k users' perspective!</div>
-  <div id="colorbar"> <img src="./static/images/colorbar.png" style="width:100%"> </div>
+  <div id="colorbar"> <img src="./static/images/colorbar_bn.png" style="width:100%"> </div>
 </section>
 
 <section style="text-align:center;padding-top:5em;">
   <div class="pagetitle" >Product-Product Similarity Matrix </b></div>
-  <div class="problem" id="sim"> <img src="./static/images/sim_product_final_line.png" style="width:100%"></div>
+  <div class="problem" id="sim"> <img src="./static/images/sim_product_final_line_bn.png" style="width:100%"></div>
   <div id="illu" style="text-align:left"> 
     <br>Pixel color = Pair-wise similarity<br>from 32k users' perspective!</div>
-  <div id="colorbar"> <img src="./static/images/colorbar.png" style="width:100%"> </div>
-  <div id="loyalty"> Brightness in a square indicates<b> Customer Loyalty</b> </div>
+  <div id="colorbar"> <img src="./static/images/colorbar_bn.png" style="width:100%"> </div>
+  <div id="loyalty"> Blackness in a square indicates<b> Customer Loyalty</b> </div>
 </section>
 
 <section id="examples" style="text-align:center;padding-top:5em;">
   <div class="pagetitle" > <b>For example...</b> </div>
-  <div class="problem" id="sim"> <img src="./static/images/sim_product_final_line.png" style="width:100%"></div>
+  <div class="problem" id="sim"> <img src="./static/images/sim_product_final_line_bn.png" style="width:100%"></div>
   <div class="problem" id="example"> <img src="./static/images/example.png" style="width:100%"></div>
 </section>
 
 <section id="examples" style="text-align:center;padding-top:5em;">
   <div class="pagetitle" > <b>For example...</b> </div>
-  <div class="problem" id="sim"> <img src="./static/images/sim_product_final_line.png" style="width:100%"></div>
+  <div class="problem" id="sim"> <img src="./static/images/sim_product_final_line_bn.png" style="width:100%"></div>
   <div class="problem" id="example"> <img src="./static/images/example.png" style="width:100%"></div>
   <div id="insight"> <span class="bold"> Actionable insights</span> for Sephora.com: 
     <br>Send marketing emails to new customers of brands with strong customer loyalty!
