--- a/front_end/app/static/styles2.css
+++ b/front_end/app/static/styles2.css
@@ -66,10 +66,18 @@
 #colorbar {
   position:absolute;
   margin-left:50%;
-  margin-top:20%;
+  margin-top:12%;
   width: 38%
 }
 
+#loyalty {
+  text-align:left;
+  font-size:.7em;
+  position:absolute;
+  margin-left: 56%;
+  margin-top:26%;
+  width: 28%;
+}
 #me {
   position:absolute;
   font-size: .7em;
@@ -123,7 +131,7 @@
 
 #data {
   margin-left: 10%;
-  margin-top: 4%;
+  margin-top: 7%;
   width: 30%;
   height: 60%;
 }
@@ -135,7 +143,7 @@
   text-indent: 0em;
   line-height: 1.5em;
   margin-left: 50%;
-  margin-top: 3%;
+  margin-top: 7%;
   width: 30%;
   height: 20%;
   border:solid 1px blue;
@@ -153,7 +161,7 @@
   margin-left: 25%;
   margin-top: 20%;
   width: 28%;
-  height: 39%;
+  height: 36%;
 }
 
 #cv {
@@ -163,7 +171,7 @@
   text-indent: 0em;
   line-height: 1.5em;
   margin-left: 50%;
-  margin-top: 32%;
+  margin-top: 24%;
   width: 30%;
   height: 20%;
   border:solid 1px blue;
@@ -189,3 +197,60 @@
 .bold {
   font-weight: bold;
 }
+
+#birch {
+  position:absolute;
+  margin-left: 10%;
+  margin-top: 15%;
+  height: 35%;
+  line-height: 1em;
+  text-align:left;
+}
+
+#infowords {
+  position:absolute;
+  margin-left: 48%;
+  margin-top: 16%;
+  height: 55%;
+}
+
+#review_short {
+  position:absolute;
+  margin-left: 11%;
+  margin-top: 1%;
+  height: 25%;
+}
+
+#prcrcl {
+  position:absolute;
+  margin-left: 60%;
+  margin-top: 2%;
+  height: 20%;
+}
+
+#prcrcl td {
+  padding:.2em;
+  border: solid 1px black;
+}
+
+#prcrcl table { 
+  color:black;
+  line-height:2em;
+  text-align:center;
+  font-size:.5em;
+}
+
+#rating_review {
+  position:absolute;
+  margin-left: 6%;
+  margin-top: 13%;
+  height: 62%;
+}
+
+#alg2 {
+  position:absolute;
+  margin-left: 10%;
+  margin-top: 2%;
+  height: 81%;
+}
+  
